--- a/GymTracker.Presentation/Pages/_Host.cshtml
+++ b/GymTracker.Presentation/Pages/_Host.cshtml
@@ -13,6 +13,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="GymTracker.Presentation.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />-->
+    <link href="css/site.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
