--- a/GymTracker.Presentation/Shared/MainLayout.razor
+++ b/GymTracker.Presentation/Shared/MainLayout.razor
@@ -1,19 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>GymTracker.Presentation</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+<header class="main-header">
+    <button class="hamburger" @onclick="ToggleSidebar">&#9776;</button>
+    <span class="header-title"><span style="font-size:1.7rem;vertical-align:middle;">🏋️‍♂️</span> GymTracker</span>
+</header>
+<div class="main-layout">
+    <NavMenu Class="@(sidebarOpen ? "open" : "")" />
+    <main class="content">
+        @Body
     </main>
 </div>
+
+@code {
+    private bool sidebarOpen = false;
+    private void ToggleSidebar() => sidebarOpen = !sidebarOpen;
+}
