removed the forward slash in the menu.

--- a/GymTracker.Presentation/Shared/NavMenu.razor
+++ b/GymTracker.Presentation/Shared/NavMenu.razor
@@ -4,22 +4,22 @@
     <a class="nav-link" href="/">
         <span class="oi oi-home"></span> Home
     </a>
-    <a class="nav-link" href="/cardio-sessions">
+    <a class="nav-link" href="cardio-sessions">
         <span class="oi oi-pulse"></span> Cardio Sessions
     </a>
-    <a class="nav-link" href="/weight-training-sessions">
+    <a class="nav-link" href="weight-training-sessions">
         <span class="oi oi-bar-chart"></span> Weight Training
     </a>
-    <a class="nav-link" href="/locations">
+    <a class="nav-link" href="locations">
         <span class="oi oi-map-marker"></span> Locations
     </a>
-    <a class="nav-link" href="/workout-types">
+    <a class="nav-link" href="workout-types">
         <span class="oi oi-list"></span> Workout Types
     </a>
-    <a class="nav-link" href="/cardio-types">
+    <a class="nav-link" href="cardio-types">
         <span class="oi oi-heart"></span> Cardio Types
     </a>
-    <a class="nav-link" href="/analytics">
+    <a class="nav-link" href="analytics">
         <span class="oi oi-graph"></span> Analytics
     </a>
 </nav>
